--- a/onglink/src/app/CSS/footer.css
+++ b/onglink/src/app/CSS/footer.css
@@ -1,5 +1,5 @@
 /*Footer*/
-footer, container, #redes_sociais{ 
+container, #redes_sociais{ 
     background-color: #34590F;
     padding-bottom: 0%;
     margin-bottom: 0px;
@@ -7,12 +7,22 @@ footer, container, #redes_sociais{
     color: white;
     
 }
+
 .py-5 {
     padding-top: 1% !important;
     padding-bottom: 0% !important;
     margin-top: 0%;
 
     
+}
+
+#ul_footer {
+  margin-bottom: 0;
+  margin-top: 30px;
+}
+
+#footer {
+  padding-bottom: 0;
 }
 
 #redes_sociais{
@@ -30,12 +40,9 @@ footer, container, #redes_sociais{
     color: rgb(255 255 255 / 75%) !important;
 }
 
-
-#footer{
-  padding-left: 5%;
-  padding-right: 5%;
-  padding-top: 5%;
-  
+#div_footer {
+  display: flex;
+  justify-content: space-around;
 }
 
 #logos{
