--- a/onglink/src/app/CSS/parceiros.css
+++ b/onglink/src/app/CSS/parceiros.css
@@ -1,5 +1,5 @@
 
-main
+#main_parceiros
 {
     background-image: url("https://images.pexels.com/photos/957024/forest-trees-perspective-bright-957024.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
     background-repeat: no-repeat;
