--- a/onglink/src/app/CSS/main.css
+++ b/onglink/src/app/CSS/main.css
@@ -76,6 +76,7 @@ body
 
 #vantagens li
 {
+    list-style-type: disc;
     padding-bottom: 30px;
 }
 
@@ -84,6 +85,7 @@ body
     padding-left: 70px;
     padding-top: 30px;
     padding-bottom: 0px;
+    text-align: left;
 }
 
 #img_votorantim, #img_tvtem
