--- a/onglink/src/app/globals.css
+++ b/onglink/src/app/globals.css
@@ -20,6 +20,9 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.bg-verde1{
+  background-color: #84a454;
+}
 
 .bg-verde2{
   background-color: #95b95f;
