--- a/onglink/src/app/CSS/perfil.css
+++ b/onglink/src/app/CSS/perfil.css
@@ -1,11 +1,47 @@
 
 #fundo_perfil {
     height: 200px;
+    object-fit: cover;
+    object-position: 0 100%;
     width: 100%;
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+}
+
+#perfil{
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+}
+
+#div1_perfil{
+    border-bottom: ;
 }
 
 #titulo_perfil{
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 20px;
+}
+
+#MUXN_certificado{
+    display: flex;
+    align-items: center;
+}
+
+
+#MUXN_certificado h3{
+    margin-bottom: 2px;
+    margin-right: 5px;
+}
+
+#container_perfil{
+    margin-bottom: 30px;
+}
+
+#div1_perfil{
+    display: flex;
+    flex-direction: row;
 }
 
 #div_nome_perfil{
@@ -14,7 +50,23 @@
     justify-content: center;
 }
 
-#logo_MUXN:hover {
+#div_publi{
+    overflow: scroll;
+    overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    padding-right: 0px;
+    height: 500px;
+}
+
+#borda_publi{
+    border-radius: 10px;
+    border-color: #2b3710c4;
+    background-color: #84a454;
+}
+
+#logo_MUXN:hover.img-overlay-wrap {
     filter: blur(2px);
 }
 
@@ -22,7 +74,6 @@
     position: relative;
     top: -95;
     left: 63;
-    visibility: hidden;
 }
 
 .img-overlay-wrap svg:hover {
